# rust-serial-monitor

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.rs  build_all.ps1  project_review.md  serial_port_filtering.md
ESP32c3DevSerial/Serial_tester/: Serial_tester.ino
src/: app.rs  config.rs  logging.rs  main.rs  serial_types.rs  serial_worker.rs  terminal_buffer.rs
tests/: serial_tests.rs
