[package]
name = "aa_rust_serial_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.28.1"
serialport = "4.3.0"
crossbeam-channel = "0.5.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
rfd = "0.14"
dirs = "5.0"
image = { version = "0.25", default-features = false, features = ["png"] }

[build-dependencies]
winres = "0.1"
